--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unidad Educativa Mahanaym</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <title>Unidad Educativa Mahanaym</title>
+    <style>
+        /* Estilos personalizados */
+        body {
+            font-family: sans-serif;
+        }
+        .social-link {
+            margin: 0 10px;
+            font-size: 20px;
+        }
+        .img-fluid {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Unidad Educativa Mahanaym</a>
@@ -30,7 +42,6 @@
         </div>
     </nav>
 
-    <!-- Redes Sociales -->
     <section id="redes-sociales" class="bg-dark text-white py-4">
         <div class="container text-center">
             <h3>Síguenos en nuestras redes sociales</h3>
@@ -48,7 +59,6 @@
         </div>
     </section>
 
-    <!-- Inicio -->
     <header id="inicio" class="text-center py-5 bg-light">
         <h1>Colegio Cristiano Mahanaym</h1>
         <p class="lead">Formando Líderes del Futuro</p>
@@ -57,7 +67,6 @@
         </div>
     </header>
 
-    <!-- Nuestra Visión -->
     <section id="vision" class="container my-5 text-center">
         <h2>Nuestra Visión</h2>
         <p>Somos una institución educativa cristiana comprometida con la formación integral de nuestros estudiantes, cultivando en ellos valores sólidos, una mente crítica y un espíritu emprendedor.</p>
@@ -66,7 +75,6 @@
         </div>
     </section>
 
-    <!-- Nuestra Misión -->
     <section id="mision" class="container my-5 text-center">
         <h2>Nuestra Misión</h2>
         <p>Inspirar a nuestros estudiantes a alcanzar su máximo potencial, brindándoles una educación basada en principios cristianos y una formación académica de excelencia.</p>
@@ -75,7 +83,6 @@
         </div>
     </section>
 
-    <!-- Valores -->
     <section id="valores" class="container my-5 text-center">
         <h2>Valores que nos Identifican</h2>
         <div class="d-grid gap-3">
@@ -92,7 +99,6 @@
         </div>
     </section>
 
-    <!-- Propuesta Educativa -->
     <section id="propuesta" class="container my-5">
         <h2 class="text-center">Propuesta Educativa</h2>
         <p class="text-center">En el Colegio Cristiano Mahanaym, ofrecemos una amplia variedad de opciones educativas adaptadas a las necesidades de nuestros estudiantes:</p>
@@ -109,7 +115,6 @@
         </div>
     </section>
 
-    <!-- Infraestructura -->
     <section id="infraestructura" class="container my-5">
         <h2 class="text-center">Infraestructura y Servicios</h2>
         <div class="row g-4 mt-4">
@@ -122,23 +127,4 @@
                 <p>Laboratorios de ciencias</p>
             </div>
             <div class="col-md-4 text-center">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkMOoC--7tZi7BsvJZy0x8ZoB_4k_mjTwsng&s" alt="Canchas deportivas" class="img-fluid rounded shadow">
-                <p>Canchas deportivas</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contáctanos -->
-    <section id="contacto" class="container my-5 text-center">
-        <h2>Contáctanos</h2>
-        <p>Si buscas una educación de calidad basada en valores cristianos, el Colegio Cristiano Mahanaym es la opción ideal para tu hijo. ¡Matrículas abiertas!</p>
-        <ul class="list-unstyled">
-            <li><strong>Dirección:</strong> [Dirección completa del colegio]</li>
-            <li><strong>Teléfono:</strong> [Número de teléfono]</li>
-            <li><strong>Correo electrónico:</strong> [Correo electrónico]</li>
-        </ul>
-    </section>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+                <img src="https://encrypted-tbn0.gstatic
